Issue #13339: Fix compile error in posixmodule.c due to missing semicolon. Thanks to Robert Xiao.